src/test/test-models/bad/validate_array_expr_bad2.stan
parameters {
  real y;
}
model {
  int int_1_a[3];
  int_1_a = { { 1*1 } };  // dim mismatch
  y ~ normal(0,1);
}
